e2e/tests/all/snapshots/radio_group_rest_desktop.snap
---
source: e2e/src/suite.rs
description: radio_group at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
LabelText
  StaticText "Plan"
radiogroup "Plan"
  radio "Free" [checked=false]
  radio "Pro" [checked]
  radio "Team" [checked=false]
button "After"
  StaticText "After"
