e2e/tests/all/snapshots/radio_group_rest_mobile.snap
---
source: e2e/src/suite.rs
description: radio_group at mobile (rest)
expression: tree
---
button "Before"
  StaticText "Before"
LabelText
  StaticText "Plan"
radiogroup "Plan"
  radio "Free" [checked=false]
  radio "Pro" [checked]
  radio "Team" [checked=false]
button "After"
  StaticText "After"
