e2e/tests/all/snapshots/range_slider_rest_mobile.snap
---
source: e2e/src/suite.rs
description: range_slider at mobile (rest)
expression: tree
---
LabelText
  StaticText "Price"
group "Price"
  slider "Price Minimum" = 20 [valuemax=80] [valuemin=0]
  slider "Price Maximum" = 80 [valuemax=100] [valuemin=20]
paragraph
  StaticText "20-80"
tooltip "20"
  StaticText "20"
